major css changes, generic error message setup, draggable items

--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -2,6 +2,18 @@
  * Globals
  */
 
+.appLink:hover {
+    text-decoration: none;
+}
+
+.landingPageLink {
+    cursor: pointer;
+}
+
+.input-group-addon {
+    border: 1px solid white;
+}
+
 .fa {
     min-width: 14px;
 }
@@ -35,7 +47,7 @@ input[type=checkbox].css-checkbox:checked + label.css-label {
     background-position: 0 -30px;
 }
 label.css-label {
-    background-image:url(img/check.png);
+    background-image:url(Images/check2.png);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -46,9 +58,15 @@ label.css-label {
 
 .mediaDashboardLink {
     border: 1px solid white;
-    background-color: darkcyan;
     padding: 5px;
     border-radius: 5px;
+    background: -moz-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* ff3.6+ */
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(0,128,128,1)), color-stop(100%, rgba(11,28,30,1))); /* safari4+,chrome */
+    background:-webkit-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* opera 11.10+ */
+    background: -ms-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* ie10+ */
+    background:radial-gradient(ellipse at center, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008080', endColorstr='#0B1C1E',GradientType=1 ); /* ie6-9 */ 
 }
 
 ::-webkit-scrollbar {
@@ -82,6 +100,7 @@ label.css-label {
   margin-bottom: 10px;
   -webkit-transition: all 0.6s ease-in;
           transition: all 0.6s ease-in;
+    color: #fff;
 }
 .form-control:focus,
  .form-control:hover {
@@ -102,9 +121,8 @@ a:hover {
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-  color: #333;
+  color: white;
   text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
   border: 1px solid #fff;
 }
 
@@ -133,7 +151,7 @@ a:hover {
 }
 .work-wrapper:hover { border-color: #71cef5; }
 .work-wrapper .fa {
-  color: #888888;
+  color: white;
 }
 /* END WORK */
 
