--- a/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
+++ b/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
@@ -9,7 +9,7 @@
     {
         <br />
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-sm-12">
 
                 @foreach (var appDataModel in Model.LandingPageApplicationLinks)
                 {
