--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -7,15 +7,15 @@
 {
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
             @Html.LabelFor(x => x.SplashScreenDetails.FirstName)
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             @Html.TextBoxFor(x => x.SplashScreenDetails.FirstName, new { @class="form-control" })
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
             @Html.ValidationMessageFor(x => x.SplashScreenDetails.FirstName)
         </div>
     </div>
@@ -23,15 +23,15 @@
     <br />
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
             @Html.LabelFor(x => x.SplashScreenDetails.LastName)
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             @Html.TextBoxFor(x => x.SplashScreenDetails.LastName, new { @class = "form-control" })
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
             @Html.ValidationMessageFor(x => x.SplashScreenDetails.LastName)
         </div>
     </div>
