--- a/devinmajordotcom/Views/Shared/Error.cshtml
+++ b/devinmajordotcom/Views/Shared/Error.cshtml
@@ -28,7 +28,7 @@ else
 }
 
 <div class="row absolute-center">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-sm-6 col-sm-offset-3">
         <span class="text-center glyphicon glyphicon-question-sign" style="font-size: 50px;"></span>
         <hr>
         <h4 class="text-center">Sorry, there is nothing available here at this time! Please contact us here, and let us know you saw this message.</h4>
