forgot to commit that

--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -257,9 +257,10 @@ body {
 @media (min-width: 768px) {
   .masthead-brand {
     float: left;
+    margin-right: 15px;
   }
   .masthead-nav {
-    float: right;
+    float: left;
   }
 }
 
