--- a/devinmajordotcom/Views/Home/_Apps.cshtml
+++ b/devinmajordotcom/Views/Home/_Apps.cshtml
@@ -2,9 +2,11 @@
 @model List<devinmajordotcom.ViewModels.SiteLinkViewModel>
 <div class="inner cover" id="home">
 
-    <h1 class="cover-heading">Welcome, fellow Humans!</h1>
+    <h1 class="cover-heading">Welcome, Fellow Humans!</h1>
+    <hr>
     <p class="lead" style="color: #71cef5;">You've reached the coolest corner of the Internet!</p>
     <p>Feel free to click one of the applications below for more fun... you never know what you'll find!</p>
+    <hr>
     <br />
 
     @if (Model.Count > 0)
