--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 
                 <div class="masthead clearfix" style="background-color:#0B1C1E; z-index: 2000;min-height: 85px; padding:2px;">
                     <div class="inner">
-                        <h3 class="masthead-brand">@ViewBag.Title</h3>
+                        <h3 class="masthead-brand text-center">@ViewBag.Title</h3>
                         <ul class="nav masthead-nav">
                             <li class="landingPageLink active" data-activediv="#home"><a>Home & Apps</a></li>
                             <li class="landingPageLink" data-activediv="#server"><a>Server Status</a></li>
