--- a/devinmajordotcom/Views/Home/_ContactContent.cshtml
+++ b/devinmajordotcom/Views/Home/_ContactContent.cshtml
@@ -2,7 +2,7 @@
 
 <div style="display:none;" class="inner cover" id="contact">
 
-    <h2 class="title"><strong>Drop me a line</strong></h2>
+    <h2 class="title"><strong>Drop Me a Line</strong></h2>
     <hr>
     <p style="color: #71cef5;">If you'd like excusive access to any of the services here (Plex, Custom Home, etc.), then feel free to send me a quick message, and I'll take it from there!</p>
     <hr>
