--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -1,6 +1,11 @@
 ﻿<div style="display:none;" class="inner cover" id="server">
 
-    <h1 class="cover-heading">Welcome, fellow Humans!</h1>
-    <p class="lead" style="color: #71cef5;">Server Status</p>
+    @*<h1 class="cover-heading">This is My Server...</h1>
+    <p class="lead" style="color: #71cef5;">Watch the live feed of statistics below, and marvel at the beauty of my server.</p>*@
+
+    <h2 class="title"><strong>This Website is Brought To You By...</strong></h2>
+    <hr>
+    <p style="color: #71cef5;">Watch the live feed of statistics below, and marvel at the beauty of my server.</p>
+    <hr>
 
 </div>
