db changes and context update, main portfolio add/edit service finished

--- a/devinmajordotcom/Views/Portfolio/Index.cshtml
+++ b/devinmajordotcom/Views/Portfolio/Index.cshtml
@@ -121,7 +121,7 @@
                 <div class="col-md-6 col-sm-6">
 
                     <h2 class="title">My <strong>Profile</strong></h2>
-                    <p><span class="tm-info-label">Name...</span>@Model.ProfileDetails.FirstName @Model.ProfileDetails.LastName</p>
+                    <p><span class="tm-info-label">Name...</span>@Model.SplashScreenDetails.FirstName @Model.SplashScreenDetails.LastName</p>
                     <p><span class="tm-info-label">Birthday...</span>@Model.ProfileDetails.DateOfBirth</p>
                     <p><span class="tm-info-label">Address...</span>@Model.ProfileDetails.Address</p>
                     <p><span class="tm-info-label">Phone...</span>@Model.ProfileDetails.PhoneNumber</p>
