--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -76,6 +76,20 @@ label.css-label {
     background: -ms-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* ie10+ */
     background:radial-gradient(ellipse at center, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* w3c */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008080', endColorstr='#0B1C1E',GradientType=1 ); /* ie6-9 */ 
+    text-decoration: none;
+    list-style: none;
+    margin-left: -40px;
+
+}
+
+mediaSortable {
+    text-decoration: none;
+    list-style: none;
+    margin: 0;
+  padding: 0;
+  border: none;
+  display: inline;
+  
 }
 
 ::-webkit-scrollbar {
