--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -6,7 +6,7 @@
 @using (Ajax.BeginForm("_ManagePortfolio", "Portfolio", null, new AjaxOptions { HttpMethod = "Post", OnSuccess = "MailSuccess(data)", OnFailure = "MailFailure(data)" }, new { @id = "updatePortfolioForm" }))
 {
     <div class="panel-group">
-        <div class="panel panel-default" style="padding-top: 10px; margin-bottom: 2vh; -webkit-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245,245,245,1);
+        <div class="panel panel-default" style="margin-bottom: 2vh; -webkit-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245,245,245,1);
 -moz-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245,245,245,1);
 box-shadow: 2.5px 2.5px 5px 2.5px rgba(245,245,245,1);">
             <div class="panel-heading portfolioPanelHeading" data-toggle="collapse" href="#collapse1">
