--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -10,7 +10,7 @@
 -moz-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245,245,245,1);
 box-shadow: 2.5px 2.5px 5px 2.5px rgba(245,245,245,1);">
             <div class="panel-heading portfolioPanelHeading" data-toggle="collapse" href="#collapse1">
-                <span class="glyphicon glyphicon-collapse-up"></span>
+                <span class="glyphicon glyphicon-collapse-up glyphicon-collapse-down"></span>
                 &nbsp;&nbsp;
                 <h4 class="panel-title" style="display: inline;">
                     <a>Splash Screen Details</a>
