--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/customScripts")
+    @Scripts.Render("~/bundles/tinymce")
 
     @RenderSection("scripts", required: false)
 
