--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>@ViewBag.Title</title>
+    
     @Styles.Render("~/Content/css")
 </head>
 
@@ -50,9 +51,10 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap")=
     @Scripts.Render("~/bundles/customScripts")
     @Scripts.Render("~/bundles/tinymce")
+    <script src="@Url.Content("~/signalr/hubs")"></script>
 
     @RenderSection("scripts", required: false)
 
